Play with multiple pages

--- a/public/hello.html
+++ b/public/hello.html
@@ -5,18 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vdom demos</title>
+    <title>Hello example</title>
 </head>
 
 <body>
-
-    <h1>Vdom demos</h1>
-
-    <ul>
-        <li><a href="counter.html">Counter example</a></li>
-        <li><a href="hello.html">Simple example</a></li>
-    </ul>
-
+    <h1>Hello example!</h1>
+    <script src="hello.bc.js"></script>
 </body>
 
 </html>
