Fake routing WIP

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <ul>
         <li><a href="counter.html">Counter example</a></li>
         <li><a href="hello.html">Simple example</a></li>
+        <li><a href="routing.html">Routing example (SPA style)</a></li>
     </ul>
 
 </body>
